# cloudscape-docs-mcp

./: .gitignore  README.md  ingest.py  pyproject.toml  server.py
docs/components/: 00_Component_Index.md
docs/components/alert/: alert_examples.md  alert_usage.md
docs/components/badge/: badge_all.md  badge_usage.md
docs/components/board-components/: board_component_empty.md  board_component_removable_items.md  board_component_simple.md  board_component_usage.md  board_components_intro.md  board_item_component_usage.md  board_item_component_with_actions.md  board_item_component_with_mixed_content.md  board_item_component_with_palette_item.md  board_item_component_with_table.md  development_guidelines.md
docs/components/cards/: cards_common.md  cards_full_page_cards.md  cards_fully_selectable.md  cards_simple.md  cards_usage.md
docs/components/charts/: area_chart_stacked_multiple_metrics.md  bar_chart_with_sub_items.md  cartesiancharts_bar_chart_multi_data_series_grouped.md  cartesiancharts_usage.md  pie_chart.md  (+6 more)
docs/foundations/: 01.colors.md  02.content_density.md  03.data_visualization_colors.md  04.design_tokens.md  05.iconography.md  06.layout.md  07.motion.md  08.spacing.md  09.theming.md  10.typography.md  using_components.md  using_global_styles.md
docs/genai_patterns/: genai_chat_example_demo.txt  genai_ingress.md  genai_loading_states.md  genai_output_label.md  genai_pattern_abstraction.md  genai_progressive_steps.md  genai_shortcut_menus.md  genai_variables.md
docs/general_patterns/: pattern_data_visualizations.md  pattern_feedback_mechanisms.md
(+91 files in other folders)
