[project]
name = "cloudscape-docs-mcp"
version = "0.1.0"
description = "MCP server for semantic search over AWS Cloudscape Design System documentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "lancedb>=0.25.3",
    "mcp>=1.22.0",
    "rich>=14.2.0",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "mcp[cli]>=1.22.0",
]
